--- a/structdestr_private.rc
+++ b/structdestr_private.rc
@@ -4,29 +4,29 @@
 #include <windows.h> // include for version info constants
 
 
-A ICON "structdestr.ico"
+A ICON "Structmethane.ico"
 
 //
 // TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
 //
 1 VERSIONINFO
-FILEVERSION 6,6,6,6
-PRODUCTVERSION 6,6,6,6
+FILEVERSION 1,2,3,4
+PRODUCTVERSION 1,2,3,4
 FILETYPE VFT_APP
 {
   BLOCK "StringFileInfo"
   {
     BLOCK "040904E4"
     {
-      VALUE "CompanyName", "pankoza"
-      VALUE "FileVersion", "6.6.6.6"
-      VALUE "FileDescription", "structdestr setup"
+      VALUE "CompanyName", "MazeIcon"
+      VALUE "FileVersion", "1.2.3.4"
+      VALUE "FileDescription", "LAVA CONKER THE SQUIRREL"
       VALUE "InternalName", ""
       VALUE "LegalCopyright", ""
       VALUE "LegalTrademarks", ""
       VALUE "OriginalFilename", ""
-      VALUE "ProductName", "This is a Malware"
-      VALUE "ProductVersion", "6.6.6.6"
+      VALUE "ProductName", "This is a No Skidded Malware"
+      VALUE "ProductVersion", "1.2.3.4"
     }
   }
   BLOCK "VarFileInfo"
